--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PresalesGame</title>
+  <title>The Presales Game</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!--  Fonts and icons     -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>   
 </head>
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
+
 </html>
